--- a/pages/package.json
+++ b/pages/package.json
@@ -11,7 +11,9 @@
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.14.1",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-route": "^1.5.1",
+    "vue-router": "^3.4.9"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
