--- a/pages/package.json
+++ b/pages/package.json
@@ -13,7 +13,8 @@
     "element-ui": "^2.14.1",
     "vue": "^2.6.11",
     "vue-route": "^1.5.1",
-    "vue-router": "^3.4.9"
+    "vue-router": "^3.4.9",
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
